--- a/environment.yml
+++ b/environment.yml
@@ -39,7 +39,6 @@ dependencies:
   - python=3.9.16
   - python-dateutil=2.8.2
   - python_abi=3.9
-  - pywin32=305
   - pyzmq=25.1.0
   - setuptools=67.8.0
   - six=1.16.0
@@ -48,64 +47,12 @@ dependencies:
   - tornado=6.3.2
   - traitlets=5.9.0
   - typing_extensions=4.6.3
-  - ucrt=10.0.22621.0
-  - vc=14.3
-  - vc14_runtime=14.34.31931
-  - vs2015_runtime=14.34.31931
   - wcwidth=0.2.6
   - wheel=0.40.0
   - xz=5.4.2
   - zeromq=4.3.4
   - zipp=3.15.0
   - pip:
-    - absl-py==1.4.0
-    - aiofiles==22.1.0
-    - aiosqlite==0.19.0
-    - albumentations==1.3.0
-    - ale-py==0.7.4
-    - altair==5.0.1
-    - anyio==3.6.2
-    - appdirs==1.4.4
-    - argon2-cffi==21.3.0
-    - argon2-cffi-bindings==21.2.0
-    - arrow==1.2.3
-    - attr==0.3.1
-    - attrs==23.1.0
-    - autorom==0.6.1
-    - autorom-accept-rom-license==0.6.1
-    - babel==2.12.1
-    - beautifulsoup4==4.12.2
-    - bleach==6.0.0
-    - blinker==1.6.2
-    - boto==2.49.0
-    - boxing==0.1.4
-    - certifi==2022.12.7
-    - cffi==1.15.1
-    - charset-normalizer==2.1.1
-    - click==7.1.2
-    - cloudpickle==2.2.1
-    - contourpy==1.0.7
-    - cycler==0.11.0
-    - defusedxml==0.7.1
-    - deprecated==1.2.14
-    - django-ranged-fileresponse==0.1.2
-    - drf-dynamic-fields==0.3.0
-    - drf-flex-fields==0.9.5
-    - easyocr==1.6.2
-    - expiringdict==1.2.2
-    - fastjsonschema==2.16.3
-    - filelock==3.9.0
-    - fonttools==4.39.3
-    - fqdn==1.5.1
-    - gitdb==4.0.10
-    - gitpython==3.1.31
-    - google-auth==2.19.1
-    - google-auth-oauthlib==1.0.0
-    - gym==0.21.0
-    - h11==0.14.0
-    - htmlmin==0.1.12
-    - huggingface-hub==0.13.4
-    - idna==3.4
     - imageio==2.27.0
     - importlib-metadata==4.13.0
     - importlib-resources==5.12.0
@@ -174,57 +121,10 @@ dependencies:
     - pytesseract==0.3.10
     - python-bidi==0.4.2
     - python-json-logger==2.0.4
-    - pytz==2019.3
+    - pytz>=2020.1
     - pytz-deprecation-shim==0.1.0.post0
     - pywavelets==1.4.1
-    - pywinpty==2.0.10
-    - pyyaml==6.0
-    - qudida==0.0.4
-    - regex==2023.3.23
-    - requests==2.28.1
-    - requests-oauthlib==1.3.1
-    - rfc3339-validator==0.1.4
-    - rfc3986-validator==0.1.1
-    - rich==13.4.1
-    - ruamel-yaml-clib==0.2.7
-    - rules==2.2
-    - scikit-image==0.20.0
-    - scikit-learn==1.2.2
-    - scipy==1.9.1
-    - semver==2.13.0
-    - send2trash==1.8.2
-    - sentencepiece==0.1.98
-    - sentry-sdk==1.21.1
-    - shapely==2.0.1
-    - simplejson==3.19.1
-    - smmap==5.0.0
-    - sniffio==1.3.0
-    - soupsieve==2.4.1
-    - sqlparse==0.4.4
-    - stable-baselines3==1.8.0
     - streamlit==1.23.1
-    - sympy==1.11.1
-    - tenacity==8.2.2
-    - tensorboard==2.13.0
-    - tensorboard-data-server==0.7.0
-    - terminado==0.17.1
-    - threadpoolctl==3.1.0
-    - tifffile==2023.4.12
-    - timm==0.6.13
-    - tinycss2==1.2.1
-    - tokenizers==0.13.3
-    - toml==0.10.2
-    - tomli==2.0.1
-    - toolz==0.12.0
-    - torch==2.0.0+cu117
-    - torchaudio==2.0.1+cu117
-    - torchmetrics==0.11.4
-    - torchvision==0.15.1+cu117
-    - tqdm==4.65.0
-    - transformers==4.28.1
-    - typing-extensions==4.4.0
-    - tzdata==2023.3
-    - tzlocal==4.3
     - ua-parser==0.16.1
     - ujson==5.7.0
     - uri-template==1.2.0
